Add color settings and update css

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
     /* border: 1px solid black; */
+    font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
     padding: 0px;
     margin: 0px;
@@ -13,14 +14,24 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 20px;
     height: 100%;
     background-color: grey;
+}
+
+#header {
+    align-self: stretch;
+    padding: 10px;
+    border-bottom: 5px solid black;
+    text-align: center;
+    font-size: 50px;
+    background-color: gold;
 }
 
 #gridContainer {
     display: flex;
     align-items: center;
-    flex: 0 1 800px;
+    flex: 1 1 0px;
     max-width: 100%;
     aspect-ratio: 1;
     /* background-color: yellow; */
@@ -29,7 +40,52 @@ body {
 #grid {
     display: flex;
     flex-direction: column;
-    flex: 0 1 800px;
+    flex: 1 1 0px;
     aspect-ratio: 1;
-    background-color: azure;
+    border: 5px solid black;
+}
+
+#settings {
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
+#canvasSettings, #penSettings {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 250px;
+    padding: 10px;
+    border: 5px solid black;
+    border-radius: 10px;
+    background-color: gold;
+}
+
+input, button {
+    width: 100%;
+    border: none;
+}
+
+button {
+    padding: 5px;
+    border-radius: 5px;
+    background-color: black;
+    color: white;
+    font-weight: bold;
+}
+
+button:hover {
+    cursor: pointer;
+    background-color: white;
+    color: black;
+}
+
+.pressed {
+    cursor: pointer;
+    background-color: green;
+    color: white;
 }
